--- a/ColorizeTrainingStableLargeBatch.ipynb
+++ b/ColorizeTrainingStableLargeBatch.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES']='0' "
+    "\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
    ]
   },
   {
@@ -97,8 +98,10 @@
     "# Set limit of GPU used before swapping to tensors to host memory\n",
     "max_gpu_mem = 7\n",
     "\n",
+    "\n",
     "def gb_to_bytes(gb):\n",
-    "    return gb*1024*1024*1024\n",
+    "    return gb * 1024 * 1024 * 1024\n",
+    "\n",
     "\n",
     "# Enable PyTorch LMS\n",
     "torch.cuda.set.enabled_lms(True)\n",
@@ -140,29 +143,29 @@
    "outputs": [],
    "source": [
     "# Path to Training Data\n",
-    "path = Path('data/imagenet/ILSVRC/Data/CLS-LOC')\n",
+    "path = Path(\"data/imagenet/ILSVRC/Data/CLS-LOC\")\n",
     "path_hr = path\n",
     "\n",
     "# Path to Black and White images\n",
-    "path_bandw = Path('/training/DeOldify')\n",
-    "path_lr = path_bandw/'bandw'\n",
+    "path_bandw = Path(\"/training/DeOldify\")\n",
+    "path_lr = path_bandw / \"bandw\"\n",
     "\n",
     "# Name of Model\n",
-    "proj_id = 'StableModel'\n",
+    "proj_id = \"StableModel\"\n",
     "\n",
     "# Name of Generator\n",
-    "gen_name = proj_id + '_gen'\n",
-    "pre_gen_name = gen_name + '_0'\n",
+    "gen_name = proj_id + \"_gen\"\n",
+    "pre_gen_name = gen_name + \"_0\"\n",
     "\n",
     "# Name of Critic\n",
-    "crit_name = proj_id + '_crit'\n",
+    "crit_name = proj_id + \"_crit\"\n",
     "\n",
     "# Name of Generated Images folder, located within the Black and White folder\n",
-    "name_gen = proj_id + '_image_gen'\n",
-    "path_gen = path/name_gen\n",
+    "name_gen = proj_id + \"_image_gen\"\n",
+    "path_gen = path / name_gen\n",
     "\n",
     "# Path to tensorboard data\n",
-    "TENSORBOARD_PATH = Path('data/tensorboard/' + proj_id)\n",
+    "TENSORBOARD_PATH = Path(\"data/tensorboard/\" + proj_id)\n",
     "\n",
     "nf_factor = 2\n",
     "pct_start = 1e-8\n",
@@ -177,35 +180,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(bs:int, sz:int, keep_pct:float):\n",
-    "    return get_colorize_data(sz=sz, bs=bs, crappy_path=path_lr, good_path=path_hr, \n",
-    "                             random_seed=None, keep_pct=keep_pct, num_workers=num_works)\n",
+    "def get_data(bs: int, sz: int, keep_pct: float):\n",
+    "    return get_colorize_data(\n",
+    "        sz=sz,\n",
+    "        bs=bs,\n",
+    "        crappy_path=path_lr,\n",
+    "        good_path=path_hr,\n",
+    "        random_seed=None,\n",
+    "        keep_pct=keep_pct,\n",
+    "        num_workers=num_works,\n",
+    "    )\n",
+    "\n",
     "\n",
     "def get_crit_data(classes, bs, sz):\n",
-    "    src = ImageList.from_folder(path, include=classes, recurse=True).split_by_rand_pct(0.1, seed=42)\n",
+    "    src = ImageList.from_folder(path, include=classes, recurse=True).split_by_rand_pct(\n",
+    "        0.1, seed=42\n",
+    "    )\n",
     "    ll = src.label_from_folder(classes=classes)\n",
-    "    data = (ll.transform(get_transforms(max_zoom=2.), size=sz)\n",
-    "           .databunch(bs=bs).normalize(imagenet_stats))\n",
+    "    data = (\n",
+    "        ll.transform(get_transforms(max_zoom=2.0), size=sz)\n",
+    "        .databunch(bs=bs)\n",
+    "        .normalize(imagenet_stats)\n",
+    "    )\n",
     "    return data\n",
     "\n",
-    "def create_training_images(fn,i):\n",
-    "    dest = path_lr/fn.relative_to(path_hr)\n",
+    "\n",
+    "def create_training_images(fn, i):\n",
+    "    dest = path_lr / fn.relative_to(path_hr)\n",
     "    dest.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    img = PIL.Image.open(fn).convert('LA').convert('RGB')\n",
-    "    img.save(dest)  \n",
-    "    \n",
+    "    img = PIL.Image.open(fn).convert(\"LA\").convert(\"RGB\")\n",
+    "    img.save(dest)\n",
+    "\n",
+    "\n",
     "def save_preds(dl):\n",
-    "    i=0\n",
+    "    i = 0\n",
     "    names = dl.dataset.items\n",
-    "    \n",
+    "\n",
     "    for b in dl:\n",
     "        preds = learn_gen.pred_batch(batch=b, reconstruct=True)\n",
     "        for o in preds:\n",
-    "            o.save(path_gen/names[i].name)\n",
+    "            o.save(path_gen / names[i].name)\n",
     "            i += 1\n",
-    "    \n",
+    "\n",
+    "\n",
     "def save_gen_images():\n",
-    "    if path_gen.exists(): shutil.rmtree(path_gen)\n",
+    "    if path_gen.exists():\n",
+    "        shutil.rmtree(path_gen)\n",
     "    path_gen.mkdir(exist_ok=True)\n",
     "    data_gen = get_data(bs=bs, sz=sz, keep_pct=0.085)\n",
     "    save_preds(data_gen.fix_dl)\n",
@@ -265,9 +285,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=88 # This can be increased if using PyTorch LMS, training could be slower.\n",
-    "sz=64\n",
-    "keep_pct=1.0"
+    "bs = 88  # This can be increased if using PyTorch LMS, training could be slower.\n",
+    "sz = 64\n",
+    "keep_pct = 1.0"
    ]
   },
   {
@@ -294,7 +314,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen.callback_fns.append(partial(ImageGenTensorboardWriter, base_dir=TENSORBOARD_PATH, name='GenPre'))"
+    "learn_gen.callback_fns.append(\n",
+    "    partial(ImageGenTensorboardWriter, base_dir=TENSORBOARD_PATH, name=\"GenPre\")\n",
+    ")"
    ]
   },
   {
@@ -330,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen.fit_one_cycle(1, pct_start=pct_start,  max_lr=slice(3e-7, 3e-4))"
+    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(3e-7, 3e-4))"
    ]
   },
   {
@@ -355,9 +377,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=40 # This can be increased if using PyTorch LMS, training could be slower.\n",
-    "sz=128\n",
-    "keep_pct=1.0"
+    "bs = 40  # This can be increased if using PyTorch LMS, training could be slower.\n",
+    "sz = 128\n",
+    "keep_pct = 1.0"
    ]
   },
   {
@@ -384,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(1e-7,1e-4))"
+    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(1e-7, 1e-4))"
    ]
   },
   {
@@ -409,9 +431,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=16 # This can be increased if using PyTorch LMS, training could be slower.\n",
-    "sz=192\n",
-    "keep_pct=0.50"
+    "bs = 16  # This can be increased if using PyTorch LMS, training could be slower.\n",
+    "sz = 192\n",
+    "keep_pct = 0.50"
    ]
   },
   {
@@ -438,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(5e-8,5e-5))"
+    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(5e-8, 5e-5))"
    ]
   },
   {
@@ -463,9 +485,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=8 # This can be increased if using PyTorch LMS, training could be slower.\n",
-    "sz=256\n",
-    "keep_pct=0.50"
+    "bs = 8  # This can be increased if using PyTorch LMS, training could be slower.\n",
+    "sz = 256\n",
+    "keep_pct = 0.50"
    ]
   },
   {
@@ -492,7 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(5e-8,5e-5))"
+    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(5e-8, 5e-5))"
    ]
   },
   {
@@ -527,10 +549,10 @@
    "source": [
     "old_checkpoint_num = 0\n",
     "checkpoint_num = old_checkpoint_num + 1\n",
-    "gen_old_checkpoint_name = gen_name + '_' + str(old_checkpoint_num)\n",
-    "gen_new_checkpoint_name = gen_name + '_' + str(checkpoint_num)\n",
-    "crit_old_checkpoint_name = crit_name + '_' + str(old_checkpoint_num)\n",
-    "crit_new_checkpoint_name= crit_name + '_' + str(checkpoint_num)"
+    "gen_old_checkpoint_name = gen_name + \"_\" + str(old_checkpoint_num)\n",
+    "gen_new_checkpoint_name = gen_name + \"_\" + str(checkpoint_num)\n",
+    "crit_old_checkpoint_name = crit_name + \"_\" + str(old_checkpoint_num)\n",
+    "crit_new_checkpoint_name = crit_name + \"_\" + str(checkpoint_num)"
    ]
   },
   {
@@ -546,8 +568,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=8\n",
-    "sz=256"
+    "bs = 8\n",
+    "sz = 256"
    ]
   },
   {
@@ -556,7 +578,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen = gen_learner_wide(data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor).load(gen_old_checkpoint_name, with_opt=False)"
+    "learn_gen = gen_learner_wide(\n",
+    "    data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor\n",
+    ").load(gen_old_checkpoint_name, with_opt=False)"
    ]
   },
   {
@@ -589,14 +613,16 @@
    "outputs": [],
    "source": [
     "if old_checkpoint_num == 0:\n",
-    "    bs=64\n",
-    "    sz=128\n",
-    "    learn_gen=None\n",
+    "    bs = 64\n",
+    "    sz = 128\n",
+    "    learn_gen = None\n",
     "    gc.collect()\n",
-    "    data_crit = get_crit_data([name_gen, 'test'], bs=bs, sz=sz)\n",
+    "    data_crit = get_crit_data([name_gen, \"test\"], bs=bs, sz=sz)\n",
     "    data_crit.show_batch(rows=3, ds_type=DatasetType.Train, imgsize=3)\n",
     "    learn_critic = colorize_crit_learner(data=data_crit, nf=256)\n",
-    "    learn_critic.callback_fns.append(partial(LearnerTensorboardWriter, base_dir=TENSORBOARD_PATH, name='CriticPre'))\n",
+    "    learn_critic.callback_fns.append(\n",
+    "        partial(LearnerTensorboardWriter, base_dir=TENSORBOARD_PATH, name=\"CriticPre\")\n",
+    "    )\n",
     "    learn_critic.fit_one_cycle(6, 1e-3)\n",
     "    learn_critic.save(crit_old_checkpoint_name)"
    ]
@@ -607,8 +633,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=8\n",
-    "sz=256"
+    "bs = 8\n",
+    "sz = 256"
    ]
   },
   {
@@ -617,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_crit = get_crit_data([name_gen, 'test'], bs=bs, sz=sz)"
+    "data_crit = get_crit_data([name_gen, \"test\"], bs=bs, sz=sz)"
    ]
   },
   {
@@ -635,7 +661,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_critic = colorize_crit_learner(data=data_crit, nf=256).load(crit_old_checkpoint_name, with_opt=False)"
+    "learn_critic = colorize_crit_learner(data=data_crit, nf=256).load(\n",
+    "    crit_old_checkpoint_name, with_opt=False\n",
+    ")"
    ]
   },
   {
@@ -644,7 +672,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_critic.callback_fns.append(partial(LearnerTensorboardWriter, base_dir=TENSORBOARD_PATH, name='CriticPre'))"
+    "learn_critic.callback_fns.append(\n",
+    "    partial(LearnerTensorboardWriter, base_dir=TENSORBOARD_PATH, name=\"CriticPre\")\n",
+    ")"
    ]
   },
   {
@@ -678,8 +708,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_crit=None\n",
-    "learn_gen=None\n",
+    "learn_crit = None\n",
+    "learn_gen = None\n",
     "gc.collect()"
    ]
   },
@@ -689,9 +719,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr=2e-5\n",
-    "sz=256\n",
-    "bs=5"
+    "lr = 2e-5\n",
+    "sz = 256\n",
+    "bs = 5"
    ]
   },
   {
@@ -700,7 +730,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_crit = get_crit_data([name_gen, 'test'], bs=bs, sz=sz)"
+    "data_crit = get_crit_data([name_gen, \"test\"], bs=bs, sz=sz)"
    ]
   },
   {
@@ -709,7 +739,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_crit = colorize_crit_learner(data=data_crit, nf=256).load(crit_new_checkpoint_name, with_opt=False)"
+    "learn_crit = colorize_crit_learner(data=data_crit, nf=256).load(\n",
+    "    crit_new_checkpoint_name, with_opt=False\n",
+    ")"
    ]
   },
   {
@@ -718,7 +750,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen = gen_learner_wide(data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor).load(gen_old_checkpoint_name, with_opt=False)"
+    "learn_gen = gen_learner_wide(\n",
+    "    data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor\n",
+    ").load(gen_old_checkpoint_name, with_opt=False)"
    ]
   },
   {
@@ -728,11 +762,32 @@
    "outputs": [],
    "source": [
     "switcher = partial(AdaptiveGANSwitcher, critic_thresh=0.65)\n",
-    "learn = GANLearner.from_learners(learn_gen, learn_crit, weights_gen=(1.0,1.5), show_img=False, switcher=switcher,\n",
-    "                                 opt_func=partial(optim.Adam, betas=(0.,0.9)), wd=1e-3)\n",
-    "learn.callback_fns.append(partial(GANDiscriminativeLR, mult_lr=5.))\n",
-    "learn.callback_fns.append(partial(GANTensorboardWriter, base_dir=TENSORBOARD_PATH, name='GanLearner', visual_iters=100))\n",
-    "learn.callback_fns.append(partial(GANSaveCallback, learn_gen=learn_gen, filename=gen_new_checkpoint_name, save_iters=100))"
+    "learn = GANLearner.from_learners(\n",
+    "    learn_gen,\n",
+    "    learn_crit,\n",
+    "    weights_gen=(1.0, 1.5),\n",
+    "    show_img=False,\n",
+    "    switcher=switcher,\n",
+    "    opt_func=partial(optim.Adam, betas=(0.0, 0.9)),\n",
+    "    wd=1e-3,\n",
+    ")\n",
+    "learn.callback_fns.append(partial(GANDiscriminativeLR, mult_lr=5.0))\n",
+    "learn.callback_fns.append(\n",
+    "    partial(\n",
+    "        GANTensorboardWriter,\n",
+    "        base_dir=TENSORBOARD_PATH,\n",
+    "        name=\"GanLearner\",\n",
+    "        visual_iters=100,\n",
+    "    )\n",
+    ")\n",
+    "learn.callback_fns.append(\n",
+    "    partial(\n",
+    "        GANSaveCallback,\n",
+    "        learn_gen=learn_gen,\n",
+    "        filename=gen_new_checkpoint_name,\n",
+    "        save_iters=100,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -751,13 +806,13 @@
    "source": [
     "learn.data = get_data(sz=sz, bs=bs, keep_pct=0.03)\n",
     "learn_gen.freeze_to(-1)\n",
-    "learn.fit(1,lr)"
+    "learn.fit(1, lr)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -771,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
