--- a/ColorizeTrainingVideo.ipynb
+++ b/ColorizeTrainingVideo.ipynb
@@ -22,10 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOTE:  This must be the first call in order to work properly!\n",
+    "# NOTE:  This must be the first call in order to work properly!\n",
     "from deoldify import device\n",
     "from deoldify.device_id import DeviceId\n",
-    "#choices:  CPU, GPU0...GPU7\n",
+    "\n",
+    "# choices:  CPU, GPU0...GPU7\n",
     "device.set(device=DeviceId.GPU0)"
    ]
   },
@@ -63,22 +64,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path('data/imagenet/ILSVRC/Data/CLS-LOC')\n",
+    "path = Path(\"data/imagenet/ILSVRC/Data/CLS-LOC\")\n",
     "path_hr = path\n",
-    "path_lr = path/'bandw'\n",
+    "path_lr = path / \"bandw\"\n",
     "\n",
-    "proj_id = 'VideoModel'\n",
-    "gen_name = proj_id + '_gen'\n",
-    "pre_gen_name = gen_name + '_0'\n",
-    "crit_name = proj_id + '_crit'\n",
+    "proj_id = \"VideoModel\"\n",
+    "gen_name = proj_id + \"_gen\"\n",
+    "pre_gen_name = gen_name + \"_0\"\n",
+    "crit_name = proj_id + \"_crit\"\n",
     "\n",
-    "name_gen = proj_id + '_image_gen'\n",
-    "path_gen = path/name_gen\n",
+    "name_gen = proj_id + \"_image_gen\"\n",
+    "path_gen = path / name_gen\n",
     "\n",
-    "TENSORBOARD_PATH = Path('data/tensorboard/' + proj_id)\n",
+    "TENSORBOARD_PATH = Path(\"data/tensorboard/\" + proj_id)\n",
     "\n",
     "nf_factor = 2\n",
-    "xtra_tfms=[noisify(p=0.8)]\n",
+    "xtra_tfms = [noisify(p=0.8)]\n",
     "pct_start = 1e-8"
    ]
   },
@@ -88,35 +89,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(bs:int, sz:int, keep_pct:float):\n",
-    "    return get_colorize_data(sz=sz, bs=bs, crappy_path=path_lr, good_path=path_hr, \n",
-    "                             random_seed=None, keep_pct=keep_pct, xtra_tfms=xtra_tfms)\n",
+    "def get_data(bs: int, sz: int, keep_pct: float):\n",
+    "    return get_colorize_data(\n",
+    "        sz=sz,\n",
+    "        bs=bs,\n",
+    "        crappy_path=path_lr,\n",
+    "        good_path=path_hr,\n",
+    "        random_seed=None,\n",
+    "        keep_pct=keep_pct,\n",
+    "        xtra_tfms=xtra_tfms,\n",
+    "    )\n",
+    "\n",
     "\n",
     "def get_crit_data(classes, bs, sz):\n",
-    "    src = ImageList.from_folder(path, include=classes, recurse=True).split_by_rand_pct(0.1, seed=42)\n",
+    "    src = ImageList.from_folder(path, include=classes, recurse=True).split_by_rand_pct(\n",
+    "        0.1, seed=42\n",
+    "    )\n",
     "    ll = src.label_from_folder(classes=classes)\n",
-    "    data = (ll.transform(get_transforms(max_zoom=2.), size=sz)\n",
-    "           .databunch(bs=bs).normalize(imagenet_stats))\n",
+    "    data = (\n",
+    "        ll.transform(get_transforms(max_zoom=2.0), size=sz)\n",
+    "        .databunch(bs=bs)\n",
+    "        .normalize(imagenet_stats)\n",
+    "    )\n",
     "    return data\n",
     "\n",
-    "def create_training_images(fn,i):\n",
-    "    dest = path_lr/fn.relative_to(path_hr)\n",
+    "\n",
+    "def create_training_images(fn, i):\n",
+    "    dest = path_lr / fn.relative_to(path_hr)\n",
     "    dest.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    img = PIL.Image.open(fn).convert('LA').convert('RGB')\n",
-    "    img.save(dest)  \n",
-    "    \n",
+    "    img = PIL.Image.open(fn).convert(\"LA\").convert(\"RGB\")\n",
+    "    img.save(dest)\n",
+    "\n",
+    "\n",
     "def save_preds(dl):\n",
-    "    i=0\n",
+    "    i = 0\n",
     "    names = dl.dataset.items\n",
-    "    \n",
+    "\n",
     "    for b in dl:\n",
     "        preds = learn_gen.pred_batch(batch=b, reconstruct=True)\n",
     "        for o in preds:\n",
-    "            o.save(path_gen/names[i].name)\n",
+    "            o.save(path_gen / names[i].name)\n",
     "            i += 1\n",
-    "            \n",
+    "\n",
+    "\n",
     "def save_gen_images():\n",
-    "    if path_gen.exists(): shutil.rmtree(path_gen)\n",
+    "    if path_gen.exists():\n",
+    "        shutil.rmtree(path_gen)\n",
     "    path_gen.mkdir(exist_ok=True)\n",
     "    data_gen = get_data(bs=bs, sz=sz, keep_pct=0.085)\n",
     "    save_preds(data_gen.fix_dl)\n",
@@ -168,9 +186,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=8\n",
-    "sz=192\n",
-    "keep_pct=0.25"
+    "bs = 8\n",
+    "sz = 192\n",
+    "keep_pct = 0.25"
    ]
   },
   {
@@ -197,7 +215,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen.callback_fns.append(partial(ImageGenTensorboardWriter, base_dir=TENSORBOARD_PATH, name='GenPre'))"
+    "learn_gen.callback_fns.append(\n",
+    "    partial(ImageGenTensorboardWriter, base_dir=TENSORBOARD_PATH, name=\"GenPre\")\n",
+    ")"
    ]
   },
   {
@@ -224,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(5e-8,5e-5))"
+    "learn_gen.fit_one_cycle(1, pct_start=pct_start, max_lr=slice(5e-8, 5e-5))"
    ]
   },
   {
@@ -259,10 +279,10 @@
    "source": [
     "old_checkpoint_num = 0\n",
     "checkpoint_num = old_checkpoint_num + 1\n",
-    "gen_old_checkpoint_name = gen_name + '_' + str(old_checkpoint_num)\n",
-    "gen_new_checkpoint_name = gen_name + '_' + str(checkpoint_num)\n",
-    "crit_old_checkpoint_name = crit_name + '_' + str(old_checkpoint_num)\n",
-    "crit_new_checkpoint_name= crit_name + '_' + str(checkpoint_num)"
+    "gen_old_checkpoint_name = gen_name + \"_\" + str(old_checkpoint_num)\n",
+    "gen_new_checkpoint_name = gen_name + \"_\" + str(checkpoint_num)\n",
+    "crit_old_checkpoint_name = crit_name + \"_\" + str(old_checkpoint_num)\n",
+    "crit_new_checkpoint_name = crit_name + \"_\" + str(checkpoint_num)"
    ]
   },
   {
@@ -278,8 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=8\n",
-    "sz=192"
+    "bs = 8\n",
+    "sz = 192"
    ]
   },
   {
@@ -288,7 +308,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen = gen_learner_wide(data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor).load(gen_old_checkpoint_name, with_opt=False)"
+    "learn_gen = gen_learner_wide(\n",
+    "    data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor\n",
+    ").load(gen_old_checkpoint_name, with_opt=False)"
    ]
   },
   {
@@ -313,8 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs=16\n",
-    "sz=192"
+    "bs = 16\n",
+    "sz = 192"
    ]
   },
   {
@@ -323,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen=None\n",
+    "learn_gen = None\n",
     "gc.collect()"
    ]
   },
@@ -333,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_crit = get_crit_data([name_gen, 'test'], bs=bs, sz=sz)"
+    "data_crit = get_crit_data([name_gen, \"test\"], bs=bs, sz=sz)"
    ]
   },
   {
@@ -351,7 +373,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_critic = colorize_crit_learner(data=data_crit, nf=256).load(crit_old_checkpoint_name, with_opt=False)"
+    "learn_critic = colorize_crit_learner(data=data_crit, nf=256).load(\n",
+    "    crit_old_checkpoint_name, with_opt=False\n",
+    ")"
    ]
   },
   {
@@ -360,7 +384,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_critic.callback_fns.append(partial(LearnerTensorboardWriter, base_dir=TENSORBOARD_PATH, name='CriticPre'))"
+    "learn_critic.callback_fns.append(\n",
+    "    partial(LearnerTensorboardWriter, base_dir=TENSORBOARD_PATH, name=\"CriticPre\")\n",
+    ")"
    ]
   },
   {
@@ -394,8 +420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_crit=None\n",
-    "learn_gen=None\n",
+    "learn_crit = None\n",
+    "learn_gen = None\n",
     "gc.collect()"
    ]
   },
@@ -405,9 +431,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr=5e-6\n",
-    "sz=192\n",
-    "bs=5"
+    "lr = 5e-6\n",
+    "sz = 192\n",
+    "bs = 5"
    ]
   },
   {
@@ -416,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_crit = get_crit_data([name_gen, 'test'], bs=bs, sz=sz)"
+    "data_crit = get_crit_data([name_gen, \"test\"], bs=bs, sz=sz)"
    ]
   },
   {
@@ -425,7 +451,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_crit = colorize_crit_learner(data=data_crit, nf=256).load(crit_new_checkpoint_name, with_opt=False)"
+    "learn_crit = colorize_crit_learner(data=data_crit, nf=256).load(\n",
+    "    crit_new_checkpoint_name, with_opt=False\n",
+    ")"
    ]
   },
   {
@@ -434,7 +462,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn_gen = gen_learner_wide(data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor).load(gen_old_checkpoint_name, with_opt=False)"
+    "learn_gen = gen_learner_wide(\n",
+    "    data=data_gen, gen_loss=FeatureLoss(), nf_factor=nf_factor\n",
+    ").load(gen_old_checkpoint_name, with_opt=False)"
    ]
   },
   {
@@ -444,11 +474,34 @@
    "outputs": [],
    "source": [
     "switcher = partial(AdaptiveGANSwitcher, critic_thresh=0.65)\n",
-    "learn = GANLearner.from_learners(learn_gen, learn_crit, weights_gen=(1.0,1.5), show_img=False, switcher=switcher,\n",
-    "                                 opt_func=partial(optim.Adam, betas=(0.,0.9)), wd=1e-3)\n",
-    "learn.callback_fns.append(partial(GANDiscriminativeLR, mult_lr=5.))\n",
-    "learn.callback_fns.append(partial(GANTensorboardWriter, base_dir=TENSORBOARD_PATH, name='GanLearner', visual_iters=100, stats_iters=10, loss_iters=1))\n",
-    "learn.callback_fns.append(partial(GANSaveCallback, learn_gen=learn_gen, filename=gen_new_checkpoint_name, save_iters=100))"
+    "learn = GANLearner.from_learners(\n",
+    "    learn_gen,\n",
+    "    learn_crit,\n",
+    "    weights_gen=(1.0, 1.5),\n",
+    "    show_img=False,\n",
+    "    switcher=switcher,\n",
+    "    opt_func=partial(optim.Adam, betas=(0.0, 0.9)),\n",
+    "    wd=1e-3,\n",
+    ")\n",
+    "learn.callback_fns.append(partial(GANDiscriminativeLR, mult_lr=5.0))\n",
+    "learn.callback_fns.append(\n",
+    "    partial(\n",
+    "        GANTensorboardWriter,\n",
+    "        base_dir=TENSORBOARD_PATH,\n",
+    "        name=\"GanLearner\",\n",
+    "        visual_iters=100,\n",
+    "        stats_iters=10,\n",
+    "        loss_iters=1,\n",
+    "    )\n",
+    ")\n",
+    "learn.callback_fns.append(\n",
+    "    partial(\n",
+    "        GANSaveCallback,\n",
+    "        learn_gen=learn_gen,\n",
+    "        filename=gen_new_checkpoint_name,\n",
+    "        save_iters=100,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -467,13 +520,13 @@
    "source": [
     "learn.data = get_data(sz=sz, bs=bs, keep_pct=0.03)\n",
     "learn_gen.freeze_to(-1)\n",
-    "learn.fit(1,lr)"
+    "learn.fit(1, lr)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -487,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
