--- a/ImageColorizer.ipynb
+++ b/ImageColorizer.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOTE:  This must be the first call in order to work properly!\n",
+    "# NOTE:  This must be the first call in order to work properly!\n",
     "from deoldify import device\n",
     "from deoldify.device_id import DeviceId\n",
-    "#choices:  CPU, GPU0...GPU7\n",
+    "\n",
+    "# choices:  CPU, GPU0...GPU7\n",
     "device.set(device=DeviceId.GPU0)"
    ]
   },
@@ -20,10 +21,14 @@
    "outputs": [],
    "source": [
     "from deoldify.visualize import *\n",
-    "plt.style.use('dark_background')\n",
-    "torch.backends.cudnn.benchmark=True\n",
+    "\n",
+    "plt.style.use(\"dark_background\")\n",
+    "torch.backends.cudnn.benchmark = True\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\")"
+    "\n",
+    "warnings.filterwarnings(\n",
+    "    \"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\"\n",
+    ")"
    ]
   },
   {
@@ -86,17 +91,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOTE:  Max is 45 with 11GB video cards. 35 is a good default\n",
-    "render_factor=35\n",
-    "#NOTE:  Make source_url None to just read from file at ./video/source/[file_name] directly without modification\n",
-    "source_url='https://upload.wikimedia.org/wikipedia/commons/e/e4/Raceland_Louisiana_Beer_Drinkers_Russell_Lee.jpg'\n",
-    "source_path = 'test_images/image.png'\n",
+    "# NOTE:  Max is 45 with 11GB video cards. 35 is a good default\n",
+    "render_factor = 35\n",
+    "# NOTE:  Make source_url None to just read from file at ./video/source/[file_name] directly without modification\n",
+    "source_url = \"https://upload.wikimedia.org/wikipedia/commons/e/e4/Raceland_Louisiana_Beer_Drinkers_Russell_Lee.jpg\"\n",
+    "source_path = \"test_images/image.png\"\n",
     "result_path = None\n",
     "\n",
     "if source_url is not None:\n",
-    "    result_path = colorizer.plot_transformed_image_from_url(url=source_url, path=source_path, render_factor=render_factor, compare=True)\n",
+    "    result_path = colorizer.plot_transformed_image_from_url(\n",
+    "        url=source_url, path=source_path, render_factor=render_factor, compare=True\n",
+    "    )\n",
     "else:\n",
-    "    result_path = colorizer.plot_transformed_image(path=source_path, render_factor=render_factor, compare=True)\n",
+    "    result_path = colorizer.plot_transformed_image(\n",
+    "        path=source_path, render_factor=render_factor, compare=True\n",
+    "    )\n",
     "\n",
     "show_image_in_notebook(result_path)"
    ]
@@ -114,8 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for i in range(10,46):\n",
-    "    #colorizer.plot_transformed_image(source_path, render_factor=i, display_render_factor=True, figsize=(10,10))"
+    "# for i in range(10,46):\n",
+    "# colorizer.plot_transformed_image(source_path, render_factor=i, display_render_factor=True, figsize=(10,10))"
    ]
   },
   {
@@ -128,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "toc": {
    "colors": {
