--- a/ImageColorizerColab.ipynb
+++ b/ImageColorizerColab.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd DeOldify"
+    "!cd DeOldify"
    ]
   },
   {
@@ -108,16 +108,17 @@
    },
    "outputs": [],
    "source": [
-    "#NOTE:  This must be the first call in order to work properly!\n",
+    "# NOTE:  This must be the first call in order to work properly!\n",
     "from deoldify import device\n",
     "from deoldify.device_id import DeviceId\n",
-    "#choices:  CPU, GPU0...GPU7\n",
+    "\n",
+    "# choices:  CPU, GPU0...GPU7\n",
     "device.set(device=DeviceId.GPU0)\n",
     "\n",
     "import torch\n",
     "\n",
     "if not torch.cuda.is_available():\n",
-    "    print('GPU not available.')"
+    "    print(\"GPU not available.\")"
    ]
   },
   {
@@ -146,7 +147,10 @@
     "import fastai\n",
     "from deoldify.visualize import *\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\")"
+    "\n",
+    "warnings.filterwarnings(\n",
+    "    \"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\"\n",
+    ")"
    ]
   },
   {
@@ -228,15 +232,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_url = '' #@param {type:\"string\"}\n",
-    "render_factor = 35  #@param {type: \"slider\", min: 7, max: 40}\n",
-    "watermarked = True #@param {type:\"boolean\"}\n",
+    "source_url = \"\"  # @param {type:\"string\"}\n",
+    "render_factor = 35  # @param {type: \"slider\", min: 7, max: 40}\n",
+    "watermarked = True  # @param {type:\"boolean\"}\n",
     "\n",
-    "if source_url is not None and source_url !='':\n",
-    "    image_path = colorizer.plot_transformed_image_from_url(url=source_url, render_factor=render_factor, compare=True, watermarked=watermarked)\n",
+    "if source_url is not None and source_url != \"\":\n",
+    "    image_path = colorizer.plot_transformed_image_from_url(\n",
+    "        url=source_url,\n",
+    "        render_factor=render_factor,\n",
+    "        compare=True,\n",
+    "        watermarked=watermarked,\n",
+    "    )\n",
     "    show_image_in_notebook(image_path)\n",
     "else:\n",
-    "    print('Provide an image url and try again.')"
+    "    print(\"Provide an image url and try again.\")"
    ]
   },
   {
@@ -252,8 +261,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10,40,2):\n",
-    "    colorizer.plot_transformed_image('test_images/image.png', render_factor=i, display_render_factor=True, figsize=(8,8))"
+    "for i in range(10, 40, 2):\n",
+    "    colorizer.plot_transformed_image(\n",
+    "        \"test_images/image.png\",\n",
+    "        render_factor=i,\n",
+    "        display_render_factor=True,\n",
+    "        figsize=(8, 8),\n",
+    "    )"
    ]
   },
   {
@@ -279,7 +293,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
