--- a/VideoColorizer.ipynb
+++ b/VideoColorizer.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOTE:  This must be the first call in order to work properly!\n",
+    "# NOTE:  This must be the first call in order to work properly!\n",
     "from deoldify import device\n",
     "from deoldify.device_id import DeviceId\n",
-    "#choices:  CPU, GPU0...GPU7\n",
+    "\n",
+    "# choices:  CPU, GPU0...GPU7\n",
     "device.set(device=DeviceId.GPU0)"
    ]
   },
@@ -20,9 +21,13 @@
    "outputs": [],
    "source": [
     "from deoldify.visualize import *\n",
-    "plt.style.use('dark_background')\n",
+    "\n",
+    "plt.style.use(\"dark_background\")\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\")"
+    "\n",
+    "warnings.filterwarnings(\n",
+    "    \"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\"\n",
+    ")"
    ]
   },
   {
@@ -91,18 +96,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOTE:  Max is 44 with 11GB video cards.  21 is a good default\n",
-    "render_factor=21\n",
-    "#NOTE:  Make source_url None to just read from file at ./video/source/[file_name] directly without modification\n",
-    "source_url='https://twitter.com/silentmoviegifs/status/1116751583386034176'\n",
-    "file_name = 'DogShy1926'\n",
-    "file_name_ext = file_name + '.mp4'\n",
+    "# NOTE:  Max is 44 with 11GB video cards.  21 is a good default\n",
+    "render_factor = 21\n",
+    "# NOTE:  Make source_url None to just read from file at ./video/source/[file_name] directly without modification\n",
+    "source_url = \"https://twitter.com/silentmoviegifs/status/1116751583386034176\"\n",
+    "file_name = \"DogShy1926\"\n",
+    "file_name_ext = file_name + \".mp4\"\n",
     "result_path = None\n",
     "\n",
     "if source_url is not None:\n",
-    "    result_path = colorizer.colorize_from_url(source_url, file_name_ext, render_factor=render_factor)\n",
+    "    result_path = colorizer.colorize_from_url(\n",
+    "        source_url, file_name_ext, render_factor=render_factor\n",
+    "    )\n",
     "else:\n",
-    "    result_path = colorizer.colorize_from_file_name(file_name_ext, render_factor=render_factor)\n",
+    "    result_path = colorizer.colorize_from_file_name(\n",
+    "        file_name_ext, render_factor=render_factor\n",
+    "    )\n",
     "\n",
     "show_video_in_notebook(result_path)"
    ]
@@ -120,8 +129,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10,45,2):\n",
-    "    colorizer.vis.plot_transformed_image('video/bwframes/' + file_name + '/00001.jpg', render_factor=i, display_render_factor=True, figsize=(8,8))"
+    "for i in range(10, 45, 2):\n",
+    "    colorizer.vis.plot_transformed_image(\n",
+    "        \"video/bwframes/\" + file_name + \"/00001.jpg\",\n",
+    "        render_factor=i,\n",
+    "        display_render_factor=True,\n",
+    "        figsize=(8, 8),\n",
+    "    )"
    ]
   },
   {
@@ -134,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "toc": {
    "colors": {
