--- a/VideoColorizerColab.ipynb
+++ b/VideoColorizerColab.ipynb
@@ -111,16 +111,17 @@
    },
    "outputs": [],
    "source": [
-    "#NOTE:  This must be the first call in order to work properly!\n",
+    "# NOTE:  This must be the first call in order to work properly!\n",
     "from deoldify import device\n",
     "from deoldify.device_id import DeviceId\n",
-    "#choices:  CPU, GPU0...GPU7\n",
+    "\n",
+    "# choices:  CPU, GPU0...GPU7\n",
     "device.set(device=DeviceId.GPU0)\n",
     "\n",
     "import torch\n",
     "\n",
     "if not torch.cuda.is_available():\n",
-    "    print('GPU not available.')\n",
+    "    print(\"GPU not available.\")\n",
     "\n",
     "from os import path"
    ]
@@ -151,9 +152,13 @@
     "import fastai\n",
     "from deoldify.visualize import *\n",
     "from pathlib import Path\n",
-    "torch.backends.cudnn.benchmark=True\n",
+    "\n",
+    "torch.backends.cudnn.benchmark = True\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\")"
+    "\n",
+    "warnings.filterwarnings(\n",
+    "    \"ignore\", category=UserWarning, message=\".*?Your .*? set is empty.*?\"\n",
+    ")"
    ]
   },
   {
@@ -242,15 +247,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_url = '' #@param {type:\"string\"}\n",
-    "render_factor = 21  #@param {type: \"slider\", min: 5, max: 40}\n",
-    "watermarked = True #@param {type:\"boolean\"}\n",
+    "source_url = \"\"  # @param {type:\"string\"}\n",
+    "render_factor = 21  # @param {type: \"slider\", min: 5, max: 40}\n",
+    "watermarked = True  # @param {type:\"boolean\"}\n",
     "\n",
-    "if source_url is not None and source_url !='':\n",
-    "    video_path = colorizer.colorize_from_url(source_url, 'video.mp4', render_factor, watermarked=watermarked)\n",
+    "if source_url is not None and source_url != \"\":\n",
+    "    video_path = colorizer.colorize_from_url(\n",
+    "        source_url, \"video.mp4\", render_factor, watermarked=watermarked\n",
+    "    )\n",
     "    show_video_in_notebook(video_path)\n",
     "else:\n",
-    "    print('Provide a video url and try again.')"
+    "    print(\"Provide a video url and try again.\")"
    ]
   },
   {
@@ -266,8 +273,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10,40,2):\n",
-    "    colorizer.vis.plot_transformed_image('video/bwframes/video/00001.jpg', render_factor=i, display_render_factor=True, figsize=(8,8))"
+    "for i in range(10, 40, 2):\n",
+    "    colorizer.vis.plot_transformed_image(\n",
+    "        \"video/bwframes/video/00001.jpg\",\n",
+    "        render_factor=i,\n",
+    "        display_render_factor=True,\n",
+    "        figsize=(8, 8),\n",
+    "    )"
    ]
   },
   {
@@ -295,7 +307,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
