Format all with black

--- a/ImageColorizerStableTests.ipynb
+++ b/ImageColorizerStableTests.ipynb
@@ -3295,7 +3295,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1940Connecticut.jpg\", render_factor=43, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1940Connecticut.jpg\", render_factor=43, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3304,7 +3306,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1940Connecticut.jpg\", render_factor=i, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1940Connecticut.jpg\", render_factor=i, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3313,7 +3317,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1911ThanksgivingMaskers.jpg\", render_factor=35, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1911ThanksgivingMaskers.jpg\", render_factor=35, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3349,7 +3355,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1890sChineseImmigrants.jpg\", render_factor=25, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1890sChineseImmigrants.jpg\", render_factor=25, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3367,7 +3375,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1929VictorianCosplayLondon.jpg\", render_factor=35, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1929VictorianCosplayLondon.jpg\", render_factor=35, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3376,7 +3386,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1959ParisFriends.png\", render_factor=40, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1959ParisFriends.png\", render_factor=40, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3385,7 +3397,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1925GypsyCampMaryland.jpg\", render_factor=40, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1925GypsyCampMaryland.jpg\", render_factor=40, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3394,7 +3408,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1941PoolTableGeorgia.jpg\", render_factor=45, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1941PoolTableGeorgia.jpg\", render_factor=45, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3457,7 +3473,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1936ParisCafe.jpg\", render_factor=46, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1936ParisCafe.jpg\", render_factor=46, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3475,7 +3493,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1940PAFamily.jpg\", render_factor=42, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1940PAFamily.jpg\", render_factor=42, compare=True\n",
+    ")"
    ]
   },
   {
@@ -3484,7 +3504,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.plot_transformed_image(\"test_images/1910Finland.jpg\", render_factor=40, compare=True)"
+    "vis.plot_transformed_image(\n",
+    "    \"test_images/1910Finland.jpg\", render_factor=40, compare=True\n",
+    ")"
    ]
   },
   {
